Support for new upgrade of the core package & update client
