# src/CSharp/EasyMicroservices.ProfilesMicroservice.WebApi/Controllers/ProfileController.cs
@@ -1,13 +1,14 @@
 ﻿using EasyMicroservices.Cores.AspCoreApi;
 using EasyMicroservices.Cores.Database.Interfaces;
 using EasyMicroservices.ProfilesMicroservice.Contracts.Common;
+using EasyMicroservices.ProfilesMicroservice.Contracts.Responses;
 using EasyMicroservices.ProfilesMicroservice.Database.Entities;
 
 namespace EasyMicroservices.ProfilesMicroservice.WebApi.Controllers
 {
-    public class ProfileController : SimpleQueryServiceController<ProfileEntity, ProfileContract, ProfileContract, ProfileContract, long>
+    public class ProfileController : SimpleQueryServiceController<ProfileEntity, ProfileContract, ProfileContract, ProfileResponseContract, long>
     {
-        public ProfileController(IContractLogic<ProfileEntity, ProfileContract, ProfileContract, ProfileContract, long> contractReadable) : base(contractReadable)
+        public ProfileController(IContractLogic<ProfileEntity, ProfileContract, ProfileContract, ProfileResponseContract, long> contractReadable) : base(contractReadable)
         {
 
         }
